@@ -3,12 +3,55 @@ from opengever.base.interfaces import IRedirector
 from persistent.dict import PersistentDict
 from persistent.list import PersistentList
 from plone.app.layout.viewlets.interfaces import IAboveContentTitle
-
 from zope.interface import Interface
 from zope.publisher.interfaces.browser import IBrowserRequest
+import json
 
 
 REDIRECTOR_SESS_KEY = 'opengever_base_IRedirector'
+REDIRECTOR_COOKIE_NAME = 'ogredirect'
+
+
+class RedirectorCookie(object):
+    """Manages setting and getting the cookie, containing a list of redirect items.
+    """
+
+    def __init__(self, request):
+        self.request = request
+
+    def add(self, item):
+        self._set(self._get() + [item])
+
+    def read(self, remove=True):
+        value = self._get()
+        if remove:
+            self._set([])
+        return value
+
+    def _get(self):
+        # Load from response cookie in case this request added / updated the cookie
+        cookie = self.request.response.cookies.get(REDIRECTOR_COOKIE_NAME, {})
+        value = cookie.get('value', None)
+        if value == 'deleted':
+            value = None
+
+        # Load from request cookie in case a prior request added the cookie
+        if not value:
+            value = self.request.get(REDIRECTOR_COOKIE_NAME)
+
+        if value:
+            return json.loads(value)
+        else:
+            return []
+
+    def _set(self, cookies):
+        if cookies:
+            self.request.response.setCookie(REDIRECTOR_COOKIE_NAME,
+                                            json.dumps(cookies),
+                                            path='/')
+        else:
+            self.request.response.expireCookie(REDIRECTOR_COOKIE_NAME,
+                                               path='/')
 
 
 class Redirector(grok.Adapter):
@@ -22,37 +65,19 @@ class Redirector(grok.Adapter):
 
     def __init__(self, request):
         self.request = request
-        try:
-            self.session = request.SESSION
-        except AttributeError:
-            self.session = {}
 
     def redirect(self, url, target='_blank', timeout=0):
         """Redirects the user to a `url` which is opened in a window called
         `target` after loading the next page.
         """
-
-        if REDIRECTOR_SESS_KEY not in self.session.keys():
-            self.session[REDIRECTOR_SESS_KEY] = PersistentList()
-
-        data = PersistentDict()
-        data['url'] = url
-        data['target'] = target
-        data['timeout'] = int(timeout)
-
-        self.session[REDIRECTOR_SESS_KEY].append(data)
+        RedirectorCookie(self.request).add({'url': url,
+                                            'target': target,
+                                            'timeout': int(timeout)})
 
     def get_redirects(self, remove=True):
         """Returns a list of dicts containing the redirect informations.
         """
-
-        if REDIRECTOR_SESS_KEY not in self.session.keys():
-            return []
-        else:
-            redirects = self.session[REDIRECTOR_SESS_KEY]
-            if remove:
-                del self.session[REDIRECTOR_SESS_KEY]
-            return redirects
+        return RedirectorCookie(self.request).read(remove=remove)
 
 
 class RedirectorViewlet(grok.Viewlet):
